fix del shift content at modal

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   z-index: 10;
   inset: 0;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(3px);
+  /* background-color: rgba(0, 0, 0, 0.5);
+  backdrop-filter: blur(3px); */
 }
 .modal {
   background: #adc177;
